<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:minHeight="?actionBarSize">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/favourites"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18.0sp" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/root_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/favorites_Rv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/error_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="100.0dip"
                android:layout_height="100.0dip"
                android:contentDescription="@string/no_result"
                android:padding="8.0dip"
                android:src="@drawable/empty_fav" />

            <TextView
                fontPath="fonts/Nunito-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/what_is_love"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryText"
                android:textSize="22.0sp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0sp"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/fav_description"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14.0sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>