<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:minHeight="?actionBarSize"
        app:theme="@style/ToolBarStyle">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18.0sp" />
    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="#ffeeeeee" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#fff2f2f2"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/wallet_payment_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="16.0dip"
                        android:text="@string/walletHistory"
                        android:textAllCaps="true"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/text_medium" />

                    <RelativeLayout
                        android:id="@+id/wallet_layout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:padding="16.0dip">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/wallet_amount"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="@dimen/text_medium" />

                        <TextView
                            android:id="@+id/wallet_amount_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textColor="@color/theme"
                            android:textSize="@dimen/text_medium" />
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="16.0dip"
                    android:text="@string/card"
                    android:textAllCaps="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/text_medium" />

                <ListView
                    android:id="@+id/payment_method_lv"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:visibility="visible" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white">

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dip"
                        android:layout_marginStart="10.0dip"
                        android:layout_marginEnd="10.0dip"
                        android:background="@color/colorSecondaryText" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="10.0dip">

                        <ImageView
                            android:id="@+id/add_card_img"
                            android:layout_width="40.0dip"
                            android:layout_height="40.0dip"
                            android:layout_marginEnd="10.0dip"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_add_card" />

                        <TextView
                            android:id="@+id/add_new_cart"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/add_card_img"
                            android:text="@string/add_new_card"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/text_medium" />
                    </RelativeLayout>
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/cash_payment_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="16.0dip"
                        android:text="@string/pay_on_delivery"
                        android:textAllCaps="true"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/text_medium" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:padding="16.0dip">

                        <ImageView
                            android:id="@+id/cash_img"
                            android:layout_width="40.0dip"
                            android:layout_height="40.0dip"
                            android:layout_marginEnd="10.0dip"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_cash" />

                        <RadioButton
                            android:id="@+id/cash_check_box"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/cash_img"
                            android:button="@null"
                            android:clickable="false"
                            android:drawableEnd="@drawable/check_selector"
                            android:text="@string/by_cash"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="@dimen/text_medium" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/proceed_to_pay_btn"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/button_corner_bg_green"
                android:text="@string/proceed_to_pay"
                android:textColor="@color/colorTextWhite"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>