<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        app:contentInsetLeft="0.0dip"
        app:contentInsetStart="0.0dip"
        app:contentInsetStartWithNavigation="0.0dip"
        app:theme="@style/ToolBarStyle">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/close_img"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/close"
                android:padding="@dimen/_6sdp"
                android:src="@drawable/ic_close" />

            <TextView
                fontPath="fonts/Nunito-Bold.ttf"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginStart="@dimen/activity_vertical_margin_half"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:text="@string/filters"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18.0sp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/reset_txt"
                fontPath="fonts/Nunito-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:alpha="0.5"
                android:background="?selectableItemBackground"
                android:clickable="false"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/reset"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_tiny"
                tools:ignore="MissingPrefix" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="#ffeeeeee" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/apply_filter"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/filter_rv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#ffeeeeee" />
    </LinearLayout>

    <Button
        android:id="@+id/apply_filter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:alpha="0.5"
        android:background="@color/colorAccent"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/apply_filter"
        android:textColor="@color/colorWhite" />
</RelativeLayout>