<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/buttonLayout"
        android:background="@color/background_color"
        android:orientation="vertical"
        android:weightSum="1.0">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:id="@+id/layoutDots"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26.0dip"
            android:layout_marginEnd="16.0dip"
            android:gravity="end"
            android:text="@string/skip"
            android:textAllCaps="true"
            android:textColor="@color/theme"
            android:textSize="16.0sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20.0dip"
        android:layout_marginBottom="20.0dip"
        android:background="@color/background_color"
        android:orientation="vertical">

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="1.0dip"
            android:layout_marginRight="15.0dip"
            android:layout_weight="1.0"
            android:background="@color/theme"
            android:text="@string/sign_in"
            android:textColor="@color/colorTextWhite" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="15.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/shadow_view"
            android:text="@string/signup" />
    </LinearLayout>
</RelativeLayout>