<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorWhite">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:minHeight="?actionBarSize"
        app:theme="@style/ToolBarStyle">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/promocode"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18.0sp" />
    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_below="@id/toolbar"
        android:background="#ffeeeeee" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/_1sdp"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/promotions_rv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:id="@+id/error_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="100.0dip"
                android:layout_height="100.0dip"
                android:padding="8.0dip"
                android:src="@drawable/ic_no_promocode" />

            <TextView
                fontPath="fonts/Nunito-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/promotion_list_empty"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryText"
                android:textSize="22.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0sp"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/promotion_empty_description"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14.0sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>